# pixelsprod-api-demo

./: .env.example  README.md  pyproject.toml
.devcontainer/: devcontainer.json
pixelsprod/: package-lock.json  package.json  pyproject.toml  token.json
pixelsprod/pixelsprod/: __main__.py  constants.py  duration.py  helpers.py  prompts.py  supabase_client.py  templates.py  utils.py
pixelsprod/pixelsprod/templates/: demo_anim.py  demo_machine_learning.py  demo_software.py
pixelsprod/scripts/: dump_project.py
pixelsprod/templates/: character.yaml
pixelsprod_api_demo/: test_template.py
